src/index.css
@import url("https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: #fff;
  color: #555;
  font-family: -apple-system, BlinkMacSystemFont, "Lato", "Roboto", sans-serif;
  font-size: 62.5%;
  font-weight: 300;
  /* overflow-x: hidden; */
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

h1,
h2,
h3 {
  font-weight: 300;
  text-transform: uppercase;
}

h1 {
  margin-top: 0;
  margin-bottom: 2rem;
  color: #fff;
  font-size: 3.4rem;
  letter-spacing: 1px;
  word-spacing: 4px;
}

h2 {
  text-align: center;
  font-size: 2.8rem;
  word-spacing: 2px;
  letter-spacing: 1px;
  margin: 4rem 0;
}

a {
  cursor: pointer;
}

h3 {
  font-size: 2.2rem;
}

h2::after {
  display: block;
  height: 2px;
  width: 10rem;
  background-color: #e67e22;
  content: "";
  margin: 0 auto;
  margin-top: 2rem;
}

.btn:link,
.btn,
.btn:visited {
  display: inline-block;
  font-weight: 300;
  border-radius: 20rem;
  font-size: 2rem;
  padding: 1rem 3rem;
  text-decoration: none;
  transition: background-color 0.4s, border 0.4s, color 0.4s;
  margin-bottom: 1rem;
}

.btn:hover,
.btn:active {
  background-color: #cf6d17;
  color: #fff;
}

.btn-full:link,
.btn-full,
.btn-full:visited {
  background-color: #e67e22;
  color: #fff !important;
  margin-right: 1rem;
}

.btn-ghost,
.btn-ghost:link,
.btn-ghost:visited {
  border: 1px solid #e67e22;
  color: #e67e22 !important;
}

.btn-full,
.btn-full:hover,
.btn-full:active {
  border: 1px solid #cf6d17;
}

.btn-ghost:hover,
.btn-ghost:active {
  border: 1px solid #cf6d17;
  color: #ffffff !important;
}

.icon-small {
  width: 30px;
  text-align: center;
  margin-right: 1rem;
}

@media only screen and (min-width: 320px) {
  .row {
    margin: 0;
  }
  section {
    padding: 0;
  }
}

@media only screen and (min-width: 576px) {
  section {
    padding: 1rem 0;
  }

  .row {
    margin: 15px 0;
  }
}

@media only screen and (min-width: 768px) {
  section {
    padding: 4rem 0;
  }
}

@media only screen and (min-width: 1024px) {
  .active {
    border-bottom: 1px solid #cf6d17;
  }
}

@media only screen and (min-width: 1367px) {
  html {
    font-size: 75%;
  }
  .icon-small {
    width: 40px;
    text-align: center;
    margin-right: 1rem;
  }
}

@media only screen and (min-width: 1440px) {
  html {
    font-size: 87.5%;
  }
  .container {
    max-width: 1350px;
  }
  .icon-small {
    width: 45px;
    text-align: center;
    margin-right: 1rem;
  }
}

@media only screen and (min-width: 1920px) {
  html {
    font-size: 100%;
  }
  .container {
    max-width: 1800px;
  }
  .icon-small {
    width: 55px;
    text-align: center;
    margin-right: 1rem;
  }
}

@media only screen and (min-width: 2560px) {
  html {
    font-size: 125%;
  }
  .container {
    max-width: 1800px;
  }
  .icon-small {
    width: 65px;
    text-align: center;
    margin-right: 1rem;
  }
}

